--- a/src/style.css
+++ b/src/style.css
@@ -77,7 +77,7 @@ body {
 }
 
 .el-button {
-  @apply hover:bg-opacity-70 border-0 rounded-3xl text-xl p-6 !important;
+  @apply hover:bg-opacity-70 border-0 rounded-3xl text-xl !important;
 }
 .el-button.el-button--primary {
   @apply bg-green-florofila hover:bg-opacity-70 !important;
